lustre/llite/rw.c
@@ -449,7 +449,8 @@ ll_read_ahead_pages(const struct lu_env *env, struct cl_io *io,
 					break;
 
 				INIT_LIST_HEAD(&ra->cra_linkage);
-				rc = cl_io_read_ahead(env, io, page_idx, ra);
+				rc = cl_io_read_ahead_prep(env, io, page_idx,
+							   ra);
 				if (rc < 0) {
 					OBD_FREE_PTR(ra);
 					break;
@@ -2112,7 +2113,8 @@ int ll_readpage(struct file *file, struct page *vmpage)
 			       "pgno:%ld, beyond read end_index:%ld\n",
 			       vmpage->index, lcc->lcc_end_index);
 
-			result = cl_io_read_ahead(env, io, vmpage->index, &ra);
+			result = cl_io_read_ahead_prep(env, io,
+						       vmpage->index, &ra);
 			if (result < 0 || vmpage->index > ra.cra_end_idx) {
 				cl_read_ahead_release(env, &ra);
 				unlock_page(vmpage);
@@ -2121,15 +2123,26 @@ int ll_readpage(struct file *file, struct page *vmpage)
 		}
 	}
 
+	vio = vvp_env_io(env);
 	/* this is a sequence of checks verifying that kernel readahead is
 	 * truly disabled
 	 */
-	if (lcc && lcc->lcc_type == LCC_MMAP) {
-		if (io->u.ci_fault.ft_index != vmpage->index) {
+	if (lcc && lcc->lcc_type == LCC_MMAP &&
+	    io->u.ci_fault.ft_index != vmpage->index) {
+		if (!(vio->u.fault.ft_vma->vm_flags & VM_HUGEPAGE)) {
+
 			CERROR("%s: ft_index %lu, vmpage index %lu\n",
 			       sbi->ll_fsname, io->u.ci_fault.ft_index,
 			       vmpage->index);
 			ra_assert = true;
+		} else {
+			result = cl_io_read_ahead_prep(env, io,
+						       vmpage->index, &ra);
+			if (result < 0 || vmpage->index > ra.cra_end_idx) {
+				cl_read_ahead_release(env, &ra);
+				unlock_page(vmpage);
+				RETURN(AOP_TRUNCATED_PAGE);
+			}
 		}
 	}
 
@@ -2151,7 +2164,6 @@ int ll_readpage(struct file *file, struct page *vmpage)
 	if (ra_assert)
 		LASSERT(!ra_assert);
 
-	vio = vvp_env_io(env);
 	/*
 	 * Direct read can fall back to buffered read, but DIO is done
 	 * with lockless i/o, and buffered requires LDLM locking, so in
